# Voxtral-Local-Transcript

./: .env.example  .gitignore  LEEME.md  README.md  pyproject.toml
profiles/: voxtray-balanced.toml  voxtray-latency.toml  voxtray-online-mistral.toml  voxtray-online-openai.toml  voxtray-vram-saver.toml
scripts/: apply_profile.sh  bench_voxtray.py  build_wsl2_bundle.sh  install_ubuntu_integration.sh  install_windows_shortcuts.ps1  install_wsl2.sh  setup_local.sh
src/voxtray/: __init__.py  __main__.py  assistant_hook.py  audio.py  backend_contract.py  backends.py  cli.py  clipboard.py  cloud_backends.py  config.py  controller.py  engine.py  gnome.py  history.py  logging_utils.py  notify.py  paths.py  postprocess.py  quality.py  realtime.py  recordings.py  state.py  tray.py  worker.py
tests/: test_assistant_hook.py  test_backends.py  test_clipboard.py  test_config.py  test_controller.py  test_engine.py  test_history.py  test_postprocess.py  test_quality.py  test_realtime.py  test_recordings.py  test_state.py  test_worker.py
